fixing notifications z-index

--- a/httpdocs/css/ntopng.css
+++ b/httpdocs/css/ntopng.css
@@ -1231,7 +1231,11 @@ td.dt-body-right {
 }
 
 .notification-container {
-  position: absolute; top: 4rem; right: 1rem; z-index: 1000; width: 20%;
+  position: absolute;
+  top: 4rem;
+  right: 1rem;
+  z-index: 950;
+  width: 20%;
 }
 
 .blog-section {
